# questions-irt-calculator

./: README.md
code-analytics/Etapa_1/: Unificador_Solutions.ipynb
code-analytics/Etapa_1/code-mining-tool/: temp_code.py
code-analytics/Etapa_2/: Pre_Processamento.ipynb
code-analytics/Etapa_3/: Processamento.ipynb
code-analytics/Etapa_4/codebench-analytics-full/: Criar_Arquivos.ipynb  Makefile  README.md  pyproject.toml
code-analytics/Etapa_4/codebench-analytics-full/codebench_analytics/: main.py
code-analytics/Etapa_4/codebench-analytics-full/codebench_analytics/collector/: __init__.py  actions.py  executions.py
code-analytics/Etapa_4/codebench-analytics-full/codebench_analytics/extractor/: __init__.py  action_extractor.py  code_metrics_extractor.py  execution_extractor.py
code-analytics/Etapa_4/codebench-analytics-full/codebench_analytics/logging/: logging.ini
code-analytics/Etapa_4/codebench-analytics-full/codebench_analytics/model/: code_metrics.py  codebench_types.py  metrics.py  token_mapping.py
code-analytics/Etapa_4/codebench-analytics-full/codebench_analytics/utils/: assessments_filter.py  code_diff.py  components.py  dataset.py
code-analytics/Etapa_4/codebench-analytics-full/notebooks/: OrdemExecucao.txt  classification.ipynb  classification_False.ipynb  correlations.ipynb  regression.ipynb  regression_False.ipynb  solutions_extractor.ipynb
